--- a/src/pages/modalnoticias/modalnoticias.html
+++ b/src/pages/modalnoticias/modalnoticias.html
@@ -7,19 +7,19 @@ Ionic pages and navigation.
 -->
 <ion-header >
 
-  <ion-navbar color="primary">
+  <ion-navbar color="dark">
     <ion-title style="text-align: center">Novo Presidente da ACIM</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
-<ion-content style="background-color: #488aff" padding>
+<ion-content style="background-color: #eeeeee">
 
   <img src="assets/imgs/chuck.jpg"/>
 
   <ion-card-content>
-    Marabá, 21 de dezembro de 2018
+    <p>Marabá, 21 de dezembro de 2018</p>
     </ion-card-content>
       <ion-card-content> Aconteceu no último dia 7 de dezembro, na sede da ACIM (Associação Comercial e Industrial de Marabá), a eleição da nova diretoria da entidade para o biênio 2019-2020. Eleito por aclamação, uma vez que apenas uma chapa se inscreveu para concorrer ao pleito, o empresário Raimundo Nonato Araújo Júnior, do Grupo Futuro Educacional, presidirá a ACIM partir deste dia 10 de dezembro, conforme dita o Estatuto da Associação.
 
@@ -27,5 +27,11 @@ Ionic pages and navigation.
 
       Ele afirmou ainda estar realmente esperançoso, acredita que novos desafios surgirão e manifestou confiança:
        “É um novo governo, mas vai dar tudo certo e eu tenho certeza de que a Associação vai
-       continuar crescendo”.</ion-card-content>
-    </ion-content>
+       continuar crescendo”.
+
+       <p>Autor: ACIM</p>
+
+     </ion-card-content>
+
+
+</ion-content>
