--- a/src/pages/homeinformacim/homeinformacim.html
+++ b/src/pages/homeinformacim/homeinformacim.html
@@ -36,7 +36,7 @@
 
   <ion-row>
     <ion-col>
-      <button ion-button icon-start clear small (click)="presentModal(contact.key)">
+      <button ion-button icon-start clear small (click)="presentModal(contact)">
         <ion-icon name="more"></ion-icon>
         <div>Ler mais</div>
       </button>
