--- a/src/pages/modalnoticias/modalnoticias.html
+++ b/src/pages/modalnoticias/modalnoticias.html
@@ -35,3 +35,27 @@ Ionic pages and navigation.
 
 
 </ion-content>
+<ion-footer>
+    <ion-toolbar style="background-color:#eeeeee">
+            <ion-grid>
+                <ion-row>
+                    <ion-col>
+                        <button ion-button clear color="dark" icon-only (click)="normalShare()">
+                            <ion-icon name="share"></ion-icon>
+                        </button>
+                    </ion-col>
+                    <ion-col>
+                        <button ion-button clear color="dark" icon-only (click)="whatsappShare()">
+                            <ion-icon name="logo-whatsapp"></ion-icon>
+                        </button>
+                    </ion-col>
+                  
+                    <ion-col>
+                        <button ion-button clear color="dark" icon-only (click)="facebookShare()">
+                            <ion-icon name="logo-facebook"></ion-icon>
+                        </button>
+                    </ion-col>
+                </ion-row>
+            </ion-grid>
+    </ion-toolbar>
+</ion-footer>
