--- a/src/pages/homeinformacim/homeinformacim.html
+++ b/src/pages/homeinformacim/homeinformacim.html
@@ -42,7 +42,7 @@
       </button>
     </ion-col>
     <ion-col>
-      <button ion-button icon-start clear small>
+      <button ion-button icon-start clear small (click)="whatsappShare(contact)">
         <ion-icon name="share"></ion-icon>
         <div>Compartilhar</div>
       </button>
