--- a/src/pages/modalnoticias/modalnoticias.html
+++ b/src/pages/modalnoticias/modalnoticias.html
@@ -9,7 +9,7 @@ Ionic pages and navigation.
 
   <ion-navbar color="dark">
       <ion-buttons begin class="float-ion-button">
-          <button ion-button icon-only class="fullWidth" (click)="closemodal()">
+          <button ion-button icon-only class="fullWidth" (click)="fechar()">
           <ion-icon name="arrow-round-back"></ion-icon>
           </button>
         </ion-buttons>
@@ -30,36 +30,30 @@ Ionic pages and navigation.
 
        <p>Autor: {{contacts.autor}}</p>
 
-       <ion-buttons >
-          <button ion-button color="danger" full (click)="deletarNoticia(contacts.key)">
-          Deletar
-          </button>
-        </ion-buttons>
-     </ion-card-content>
-     
 
+
+     </ion-card-content>
+     <button ion-button color="secondary" full (click)="whatsappShare(contacts)">
+     Enviar pelo WhatsApp
+     </button>
 </ion-content>
-<ion-footer>
+<!-- <ion-footer>
     <ion-toolbar style="background-color:#eeeeee">
             <ion-grid>
                 <ion-row>
+
                     <ion-col>
-                        <button ion-button clear color="dark" icon-only (click)="normalShare()">
-                            <ion-icon name="share"></ion-icon>
-                        </button>
-                    </ion-col>
-                    <ion-col>
-                        <button ion-button clear color="dark" icon-only (click)="whatsappShare()">
+                        <button ion-button clear color="dark" icon-only (click)="whatsappShare(contacts)">
                             <ion-icon name="logo-whatsapp"></ion-icon>
                         </button>
                     </ion-col>
-                  
+
                     <ion-col>
-                        <button ion-button clear color="dark" icon-only (click)="facebookShare()">
+                        <button ion-button clear color="dark" icon-only (click)="facebookShare(contacts)">
                             <ion-icon name="logo-facebook"></ion-icon>
                         </button>
                     </ion-col>
                 </ion-row>
             </ion-grid>
     </ion-toolbar>
-</ion-footer>
+</ion-footer>-->
