--- a/src/pages/homeinformacim/homeinformacim.html
+++ b/src/pages/homeinformacim/homeinformacim.html
@@ -23,7 +23,7 @@
     <ion-avatar item-start>
       <img src="assets/imgs/acim.jpg"/>
     </ion-avatar>
-    <h2>{{contact.titulo}}</h2>
+    <h2>{{contact.autor}}</h2>
 
     <p>{{contact.horario}}</p>
   </ion-item>
@@ -31,7 +31,7 @@
   <img src="assets/imgs/4.png"/>
 
   <ion-card-content>
-    <p>{{contact.texto}}</p>
+    <div id="div1">{{contact.titulo}}</div>
   </ion-card-content>
 
   <ion-row>
