--- a/src/pages/modalnoticias/modalnoticias.html
+++ b/src/pages/modalnoticias/modalnoticias.html
@@ -24,16 +24,16 @@ Ionic pages and navigation.
   <img src="assets/imgs/chuck.jpg"/>
 
   <ion-card-content>
-    <p>Marabá, 21 de dezembro de 2018</p>
+    <h6>Marabá, 21 de dezembro de 2018</h6>
     </ion-card-content>
-      <ion-card-content> {{contacts.texto}}
+      <ion-card-content> <p style="font-size:medium">{{contacts.texto}}</p>
 
        <p>Autor: {{contacts.autor}}</p>
 
 
 
      </ion-card-content>
-     <button ion-button color="secondary" full (click)="whatsappShare(contacts)">
+     <button ion-button color="whatsapp" full (click)="whatsappShare(contacts)">
      Enviar pelo WhatsApp
      </button>
 </ion-content>
