Fazendo upload de imagens na parte de cadastro de notícias. Exibindo as imagens na página inicial e no modal de notícias. Adição do campo texto completo

--- a/src/pages/homeinformacim/homeinformacim.html
+++ b/src/pages/homeinformacim/homeinformacim.html
@@ -28,7 +28,7 @@
     <p>{{contact.horario}}</p>
   </ion-item>
 
-  <img src="assets/imgs/4.png"/>
+  <img src="{{contact.imagem}}"/>
 
   <ion-card-content>
     <div id="div1">{{contact.titulo}}</div>
