--- a/src/pages/modalnoticias/modalnoticias.html
+++ b/src/pages/modalnoticias/modalnoticias.html
@@ -21,7 +21,7 @@ Ionic pages and navigation.
 
 <ion-content style="background-color: #eeeeee">
 
-  <img src="assets/imgs/chuck.jpg"/>
+  <img src="{{contacts.imagem}}"/>
 
   <ion-card-content>
     <h6>Marabá, 21 de dezembro de 2018</h6>
