--- a/src/pages/capacitacim/capacitacim.html
+++ b/src/pages/capacitacim/capacitacim.html
@@ -16,20 +16,21 @@
         <ion-avatar item-start>
           <img src="assets/imgs/acim.jpg" />
         </ion-avatar>
-        <h2>{{curso.ministrante}}</h2>
+        <h2>{{curso.titulo}}</h2>
 
-        <p>{{curso.horario}}</p>
+        <p>{{curso.ministrante}}</p>
       </ion-item>
 
       <img src="{{curso.imagem}}" />
 
       <ion-card-content>
-        <div id="div1">{{curso.titulo}}</div>
+        <div id="div1">{{curso.data}}</div>
+        <div id="div2">{{curso.horario}}</div>
       </ion-card-content>
 
       <ion-row>
         <ion-col>
-          <button ion-button icon-start clear small >
+          <button ion-button icon-start clear small (click)="presentModal(curso)">
             <ion-icon name="more"></ion-icon>
             <div>Ler mais</div>
           </button>
