--- a/src/pages/modalnoticias/modalnoticias.html
+++ b/src/pages/modalnoticias/modalnoticias.html
@@ -1,41 +1,31 @@
-<!--
-Generated template for the ModalnoticiasPage page.
+<ion-header>
 
-See http://ionicframework.com/docs/components/#navigation for more info on
-Ionic pages and navigation.
--->
-
-<ion-header >
-
-  <ion-navbar color="dark">
-      <ion-buttons begin class="float-ion-button">
-          <button ion-button icon-only class="fullWidth" (click)="fechar()">
-          <ion-icon name="arrow-round-back"></ion-icon>
-          </button>
+    <ion-navbar color="dark">
+        <ion-buttons begin class="float-ion-button">
+            <button ion-button icon-only class="fullWidth" (click)="fechar()">
+                <ion-icon name="arrow-round-back"></ion-icon>
+            </button>
         </ion-buttons>
-    <ion-title style="text-align: center; color: white;">{{contacts.titulo}}</ion-title>
-  </ion-navbar>
+        <ion-title style="color: white;">{{contacts.titulo}}</ion-title>
+    </ion-navbar>
 
 </ion-header>
 
-
 <ion-content style="background-color: #eeeeee">
 
-  <img src="{{contacts.imagem}}"/>
+    <img src="{{contacts.imagem}}" />
 
-  <ion-card-content>
-    <h6>Marabá, 21 de dezembro de 2018</h6>
+    <ion-card-content>
+        <h6><b>Data: &nbsp;</b>{{contacts.horario}}</h6>
+        <p style="font-size:medium">{{contacts.texto}}</p>
+
+        <h6><b>Autor: &nbsp;</b>{{contacts.autor}}</h6>
+
+
     </ion-card-content>
-      <ion-card-content> <p style="font-size:medium">{{contacts.texto}}</p>
-
-       <p>Autor: {{contacts.autor}}</p>
-
-
-
-     </ion-card-content>
-     <button ion-button color="whatsapp" full (click)="whatsappShare(contacts)">
-     Enviar pelo WhatsApp
-     </button>
+    <button ion-button color="whatsapp" full (click)="whatsappShare(contacts)">
+        Enviar pelo WhatsApp
+    </button>
 </ion-content>
 <!-- <ion-footer>
     <ion-toolbar style="background-color:#eeeeee">
