--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,4 +1,4 @@
-  <ion-tabs>
+  <ion-tabs  [selectedIndex]="myIndex">
     <ion-tab [root]="tab1Root" tabTitle="Informacim" tabIcon="globe" ></ion-tab>
     <ion-tab [root]="tab2Root" tabTitle="Capacitacim" tabIcon="clipboard"></ion-tab>
     <!-- <ion-tab [root]="tab3Root" tabTitle="Negociacim" tabIcon="briefcase" ></ion-tab> -->
