Redirecionamento para o modal de notícia quando o usuário abre a notificação. Modificações no form de noticias e no modal de exiição de notícias

--- a/src/pages/homeinformacim/homeinformacim.html
+++ b/src/pages/homeinformacim/homeinformacim.html
@@ -54,9 +54,9 @@
   </ion-list>
 
 
-<!--  <ion-fab bottom right>
+  <ion-fab bottom right>
     <button ion-fab color="primary" (click)="newNoticia()">Button</button>
-  </ion-fab> -->
+  </ion-fab>
 
 
 </ion-content>
