--- a/src/pages/homeinformacim/homeinformacim.html
+++ b/src/pages/homeinformacim/homeinformacim.html
@@ -55,7 +55,9 @@
 
 
   <ion-fab bottom right>
-    <button ion-fab color="primary" (click)="newNoticia()">Button</button>
+    <button ion-fab color="primary" (click)="newNoticia()">
+      <ion-icon name="add"></ion-icon>
+    </button>
   </ion-fab>
 
 
