--- a/src/pages/modalcurso/modalcurso.html
+++ b/src/pages/modalcurso/modalcurso.html
@@ -6,7 +6,7 @@
         <ion-icon name="arrow-round-back"></ion-icon>
       </button>
     </ion-buttons>
-    <ion-title style="color: white;">{{curso.titulo}}</ion-title>
+    <ion-title style="color: white; white-space: normal; font-size: 1.6rem">{{curso.titulo}}</ion-title>
   </ion-navbar>
 
 </ion-header>
