Adicionados pra ir pro online

--- a/src/pages/agendacim/agendacim.html
+++ b/src/pages/agendacim/agendacim.html
@@ -28,7 +28,7 @@
     <ion-item *ngIf="contact.mes=='03'" (click)="presentModal(contact)">{{contact.dia+ " - "+contact.titulo}}</ion-item>
 </div>
   </ion-list>
-    <ion-fab bottom right>
+  <!--  <ion-fab bottom right>
       <button ion-fab color="primary" (click)="newNoticia()">Button</button>
-    </ion-fab>
+    </ion-fab> -->
 </ion-content>
