--- a/src/pages/capacitacim/capacitacim.html
+++ b/src/pages/capacitacim/capacitacim.html
@@ -50,11 +50,11 @@
 <div *ngIf="vazio == true">
   <h3 style="position: absolute; top: 30%; margin: 10%; text-align: center; font-weight: bold;">Os Cursos Ofertados Aparecerão Nesta Área</h3>
 </div>
-
+<!--
   <ion-fab bottom right>
     <button ion-fab color="primary" (click)="novoCurso()">
       <ion-icon name="add"></ion-icon>
     </button>
-  </ion-fab>
+  </ion-fab> -->
 
 </ion-content>
