--- a/src/pages/homeinformacim/homeinformacim.html
+++ b/src/pages/homeinformacim/homeinformacim.html
@@ -53,12 +53,12 @@
 </ion-card>
   </ion-list>
 
-
+<!--
   <ion-fab bottom right>
     <button ion-fab color="primary" (click)="newNoticia()">
       <ion-icon name="add"></ion-icon>
     </button>
-  </ion-fab>
+  </ion-fab> -->
 
 
 </ion-content>
