--- a/src/pages/modalagenda/modalagenda.html
+++ b/src/pages/modalagenda/modalagenda.html
@@ -1,9 +1,3 @@
-<!--
-  Generated template for the ModalagendaPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 
 <ion-header >
 
@@ -31,6 +25,6 @@
 
 
  <ion-col width-50 style="text-align: right">
-      <button ion-button style="text:center" color="secondary">Me lembre desse evento!</button>
+      <button ion-button style="text:center" color="secondary" (click)="salvaNotificacao()">Me lembre desse evento!</button>
       <button ion-button style="text:center" color="danger" (click)="fechar()">Voltar</button> </ion-col>
 </ion-content>
