--- a/src/pages/quemsomos/quemsomos.html
+++ b/src/pages/quemsomos/quemsomos.html
@@ -14,7 +14,7 @@
 
 <ion-content padding>
   <div class="image">
-    <img class="circle-pic" src="assets/imgs/acim.jpg"/>
+    <img class="circle-pic" src="assets/imgs/LOGO_ACIM.png"/>
     </div>
   <div padding>
     <ion-segment [(ngModel)]="pet">
