--- a/src/pages/empresasassociadas/empresasassociadas.html
+++ b/src/pages/empresasassociadas/empresasassociadas.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar color="primary">
-    <ion-title style="text-align: center">Associados</ion-title>
+    <ion-title>Associados</ion-title>
   </ion-navbar>
 
 </ion-header>
