Versão 0.0.3 publicada na play store dia 15/02/2019

--- a/src/pages/agendacim/agendacim.html
+++ b/src/pages/agendacim/agendacim.html
@@ -1,7 +1,7 @@
 <ion-header>
 
   <ion-navbar color="primary">
-    <ion-title style="text-align: center">Agendacim</ion-title>
+    <ion-title style="text-align: center">AgendACIM</ion-title>
   </ion-navbar>
 
 </ion-header>
