--- a/src/pages/modalagenda/modalagenda.html
+++ b/src/pages/modalagenda/modalagenda.html
@@ -19,7 +19,7 @@
   <h3 style="color: #488aff"> Localização do evento </h3>
      <p> O evento irá acontecer em {{crit.localizacao}} </p>
 
-     <h3 style="color: #488aff"> Valor do evento </h3>
+     <h3 style="color: #488aff"> Investimento </h3>
       <p> O evento irá custar: {{crit.valor}} </p>
       <img src="{{crit.imagem}}"/>
 
