--- a/src/pages/novaagenda/novaagenda.html
+++ b/src/pages/novaagenda/novaagenda.html
@@ -57,7 +57,7 @@
     </ion-item>
 
     <ion-item>
-      <ion-label stacked> Valor do Evento </ion-label>
+      <ion-label stacked> Investimento </ion-label>
       <ion-input type="text" formControlName="valor"></ion-input>
     </ion-item>
     <ion-item *ngIf="!form.controls.valor.valid && (form.controls.valor.dirty || form.controls.valor.touched)"
