--- a/src/pages/quemsomos/quemsomos.html
+++ b/src/pages/quemsomos/quemsomos.html
@@ -6,7 +6,7 @@
 -->
 <ion-header>
   <ion-navbar color="primary">
-    <ion-title style="text-align: center">Quem somos</ion-title>
+    <ion-title>Quem somos</ion-title>
   </ion-navbar>
 
 </ion-header>
