--- a/src/pages/homeinformacim/homeinformacim.html
+++ b/src/pages/homeinformacim/homeinformacim.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar color="primary">
-    <ion-title style="text-align: center">Informacim</ion-title>
+    <ion-title style="text-align: center">InformACIM</ion-title>
   </ion-navbar>
 
 </ion-header>
