--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,6 +1,6 @@
   <ion-tabs  [selectedIndex]="myIndex">
-    <ion-tab [root]="tab1Root" tabTitle="Informacim" tabIcon="globe" ></ion-tab>
-    <ion-tab [root]="tab2Root" tabTitle="Capacitacim" tabIcon="clipboard"></ion-tab>
+    <ion-tab [root]="tab1Root" tabTitle="InformACIM" tabIcon="globe" ></ion-tab>
+    <ion-tab [root]="tab2Root" tabTitle="CapacitACIM" tabIcon="clipboard"></ion-tab>
     <!-- <ion-tab [root]="tab3Root" tabTitle="Negociacim" tabIcon="briefcase" ></ion-tab> -->
-    <ion-tab [root]="tab4Root" tabTitle="Agendacim" tabIcon="bookmarks"></ion-tab>
+    <ion-tab [root]="tab4Root" tabTitle="AgendACIM" tabIcon="bookmarks"></ion-tab>
   </ion-tabs>
