--- a/src/pages/capacitacim/capacitacim.html
+++ b/src/pages/capacitacim/capacitacim.html
@@ -10,7 +10,7 @@
 <ion-content>
 
   <ion-list>
-    <ion-card *ngFor="let curso of (cursos | async)?.slice().reverse()">
+    <ion-card *ngFor="let curso of (cursos | async)?.slice()">
 
       <ion-item>
         <ion-avatar item-start>
