--- a/src/pages/modalagenda/modalagenda.html
+++ b/src/pages/modalagenda/modalagenda.html
@@ -1,30 +1,40 @@
+<ion-header>
 
-<ion-header >
-
-  <ion-navbar color="primary">
-    <ion-title style="text-align: center">{{crit.titulo}}</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
+    <ion-navbar color="dark">
+      <ion-buttons begin class="float-ion-button">
+        <button ion-button icon-only class="fullWidth" (click)="fechar()">
+          <ion-icon name="arrow-round-back"></ion-icon>
+        </button>
+      </ion-buttons>
+      <label class="label-title">{{crit.titulo}}</label>
+    </ion-navbar>
+  
+  </ion-header>
 
 
 <ion-content padding>
-  <h3 style="color: #488aff"> Descrição do evento </h3>
-   <p> {{crit.descricao}}  </p>
+  <h4><b>Descrição:</b></h4>
+  <p>{{crit.descricao}} </p>
 
-   <h3 style="color: #488aff"> Duração do evento </h3>
-    <p> O evento irá acontecer na data {{crit.data}} </p>
+  <h4><b>Data e Horário:</b></h4>
+  <p>{{crit.data}} - {{crit.horario}}h</p>
 
-  <h3 style="color: #488aff"> Localização do evento </h3>
-     <p> O evento irá acontecer em {{crit.localizacao}} </p>
+  <h4><b>Localização:</b></h4>
+  <p>{{crit.localizacao}}</p>
 
-     <h3 style="color: #488aff"> Investimento </h3>
-      <p> O evento irá custar: {{crit.valor}} </p>
-      <img src="{{crit.imagem}}"/>
+  <h4><b>Investimento:</b></h4>
+  <p>{{crit.valor}}</p> 
 
+  <br>
+  <img src="{{crit.imagem}}" />
+  <br>
 
- <ion-col width-50 style="text-align: right">
-      <button ion-button style="text:center" color="secondary" (click)="salvaNotificacao()">Me lembre desse evento!</button>
-      <button ion-button style="text:center" color="danger" (click)="fechar()">Voltar</button> </ion-col>
+  <!--<ion-col width-50 style="text-align: right">
+    <button ion-button style="text:center" color="secondary" (click)="salvaNotificacao()">Me lembre desse
+      evento!</button>
+    <button ion-button style="text:center" color="danger" (click)="fechar()">Voltar</button> 
+  </ion-col>-->
+  <button ion-button full color="secondary" (click)="salvaNotificacao()">Me lembre desse
+      evento!</button>
+    <button ion-button full color="danger" (click)="fechar()">Voltar</button> 
 </ion-content>
