--- a/src/pages/modalinicial/modalinicial.html
+++ b/src/pages/modalinicial/modalinicial.html
@@ -3,20 +3,19 @@
   <ion-slide style="background-color: rgba(0,0,0,.8)">
     <h1 ion-text color="light"> Seja bem-vindo! </h1>
     <img src="/assets/imgs/informacim.png">
-    <h6 ion-text color="light"> No InformACIM você acompanha as principais notícias relacionadas à nossa Associação e fica por dentro de tudo que está acontecendo. </h6>
+    <h6 ion-text color="light"> No InformACIM você acompanha as principais notícias relacionadas às ações realizadas pela Associação Comercial e Industrial de Marabá. </h6>
   </ion-slide>
 
   <ion-slide style="background-color: rgba(0,0,0,.8)">
     <h1 ion-text color="light"> O CapacitACIM </h1>
     <img src="/assets/imgs/capacitacim.png">
-    <h5 ion-text color="light">Será uma importante ferramenta para auxiliar a formação empreendadora e capacitção da classe produtiva e seus colaboradores, tornando o ambiente empresarial cada vez mais profissional e competitivo! Nele você encontrará
-    cursos que impulsionarão o crescimento e qualificação de nossos empreendedores de forma a contrbuir ainda mais para o desenvolvimento de Marabá.</h5>
+    <h5 ion-text color="light">No CapacitACIM você encontra uma importante ferramenta para auxiliar a formação empreendedora e capacitação da classe produtiva e seus colaboradores, tornando o ambiente empresarial cada vez mais profissional e competitivo. Nele estão elencados os cursos que impulsionarão o crescimento e qualificação de nossos empreendedores de forma a contribuir, ainda mais, para o desenvolvimento de Marabá e região. </h5>
   </ion-slide>
 
   <ion-slide style="background-color: rgba(0,0,0,1)">
     <h1 ion-text color="light"> Na AgendACIM </h1>
-    <img src="/assets/imgs/icon.png">
-    <h5 ion-text color="light">Você conseguirá seguir nossa rotina, conhecer mais de perto o trabalho desenvolvido pela Instiuição, além de se programar para participar de nossos eventos e cursos! </h5>
+    <img class="agendACIM" src="/assets/imgs/icon.png">
+    <h5 ion-text color="light">Na AgendACIM você consegue seguir nossa rotina, conhecer mais de perto o trabalho desenvolvido pela Associação Comercial e Industrial de Marabá, e ainda, se programar para participar de nossos eventos e cursos.</h5>
     <button ion-button color="secondary" round full (click)="closemodal()">Continuar</button>
   </ion-slide>
 
