Concluidos para a atualização ==> 1 - Adicionando link na função de compartilhar por WhatsApp / 2 - Aviso de erro quando a imagem for muito grande

--- a/src/pages/novaagenda/novaagenda.html
+++ b/src/pages/novaagenda/novaagenda.html
@@ -9,7 +9,7 @@
 
 <ion-content padding>
 
-  <form #eventoForm="ngForm" [formGroup]="form" (submit)="onSubmit(); eventoForm.reset(); agenda.imagem = '';">
+  <form #eventoForm="ngForm" [formGroup]="form" (submit)="onSubmit();">
 
     <ion-item>
       <ion-label stacked> Título </ion-label>
