Versão 0.0.5 lançada na playstore dia 26 de fevereiro de 2019

--- a/src/pages/agendacim/agendacim.html
+++ b/src/pages/agendacim/agendacim.html
@@ -22,7 +22,9 @@
     </div>
   </ion-list>
 
-  <!--  <ion-fab bottom right>
-      <button ion-fab color="primary" (click)="newNoticia()">Button</button>
-    </ion-fab> -->
+  <ion-fab bottom right>
+      <button ion-fab color="primary" (click)="newNoticia()">
+        <ion-icon name="add"></ion-icon>
+      </button>
+    </ion-fab>
 </ion-content>
